--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{site.title}}</title>
-    <link rel="stylesheet" href="/css/site.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
 </head>
 <body>
 
@@ -13,16 +13,22 @@
 
         <header class="site-header">
 
+            {% if page.home == true %}
             <h1 class="site-title">
-                <a href="/">{{site.title}}</a>
+                <a href="{{ site.baseurl }}/">{{site.title}}</a>
             </h1>
+            {% else %}
+            <p class="site-title">
+                <a href="{{ site.baseurl }}/">{{site.title}}</a>
+            </p>
+            {% endif %}
 
-            <nav>
+            <nav class="site-nav">
                 <ul>
                     {% for page in site.pages %}
                         {% if page.title %}    
                         <li>
-                            <a href="{{ page.url }}">{{ page.title }}</a>
+                            <a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
                         </li>
                         {% endif %}
                     {% endfor %}
@@ -46,8 +52,7 @@
         </aside>
 
         <footer class="site-footer">
-            <h6>{{site.title}}</h6>
-            <p>All rights reserved &copy; Thelazyperson</p>
+            <p>All rights reserved &copy; {{ site.title }}</p>
         </footer>
 
     </div>
