--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{site.title}}</title>
+    <link rel="stylesheet" href="{{ site.baseurl }}/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
 </head>
-<body>
+<body class="
+    {% if page.title %}page page-{{ page.title | slugify }}{% endif %}
+    {% if post.title %}post{% endif %}
+    {% if page.home %}home{% endif %}
 
+">
     <div class="site">
 
         <header class="site-header">
@@ -30,16 +35,14 @@
         <main class="site-main">
 
             {% if page.title %}
-            <h1>{{page.title}}</h1>
+                <h1>{{page.title}}</h1>
             {% endif %}
 
             {{content}}
 
         </main>
 
-        <aside class="site-sidebar">
-
-        </aside>
+        {% include sidebar.html %}
 
         <footer class="site-footer">
             <p>All rights reserved &copy; {{ site.title }}</p>
