--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,12 +7,12 @@
     <title>{{site.title}}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
+    <script src="{{ site.baseurl }}/scripts/site.js"></script>
 </head>
 <body class="
     {% if page.title %}page page-{{ page.title | slugify }}{% endif %}
     {% if post.title %}post{% endif %}
     {% if page.home %}home{% endif %}
-
 ">
     <div class="site">
 
