--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -8,3 +8,8 @@
 @import url('site-footer.css');
 
 @import url('navigation.css');
+
+/* @import url('transtions.css'); */
+@import url('animations.css');
+
+@import url('gallery.css');
