--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -12,4 +12,6 @@
 /* @import url('transtions.css'); */
 @import url('animations.css');
 
-@import url('gallery.css');
+@import url('modal.css');
+
+@import url('gallery-grid.css');
